fixes on docker compose
